--- a/jors.html
+++ b/jors.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jors |\|</title>
+    <title>Jors | Portfolio</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,617;1,617&display=swap" rel="stylesheet">
 </head>
 <header>
     <div class="header-container">
@@ -22,7 +25,18 @@
 </header>
 <body>
     <div class="begin-container">
-        <p>Do things without hesitation.</p>
+        <div class="overlay-text">
+            <p>Do things without <span>hesitation.</span></p>
+        </div>
+        <img src="thumbnails/violent-crimes.jpg" alt="">
+    </div>
+
+    <div>
+        <div class="header-text">
+            <h1 id="joross">Hi, I'm Joross.</h1>
+            <p>I'm an aspiring developer that doesn't have a clear goal of what to pursue yet but determined to learn in the tech industry.</p>
+            <p>Currently I'm learning basic html and css and will update this portfolio of mine everytime I discover things!</p>
+        </div>
     </div>
 </body>
 </html>
